# afc_website

./: .gitignore  README.md  app.py  old_app.py  pyproject.toml  python_csv.py  queries.py  restore_teams.csv  run.py  schema.sql  test_app.py
example/: app.py  pyproject.toml  schema.sql  sslev
example/data/postgresqlite/: postgresqlite.json
example/data/postgresqlite/pgdata/: postgresql.conf  postmaster.opts
example/data/postgresqlite/pgdata/base/1/: 1247  1247_vm  1249  1259  13597  13602  13606  2579  2606  2608  2609  2609_vm  2610  2610_vm  2612  2618_vm  2619  2659  2662  2663  2664  2665  2667  2678  2679  2684  2685  2696  2703  2753_vm  2836  2838  2840_vm  3079  3456_fsm  3600  3600_vm  3602  3605  3608  (+2 more)
example/data/postgresqlite/pgdata/base/13773/: 1249_vm  1259  1259_vm  13611  2600_vm  2601_vm  2603_vm  2605_vm  2606_vm  2608_vm  2615  2615_vm  2616_vm  2619_fsm  2619_vm  2658  2666  2673  2674  2681  2682  2704  2836_vm  2837  2838_vm  2839  2840  2841  3080  3394  3394_vm  3455  3456  3456_vm  3601_vm  3603  3603_vm  3604  3712  3764  (+1 more)
example/data/postgresqlite/pgdata/base/13774/: 1247  1247_vm  1249  1255  (+86 more)
example/data/postgresqlite/pgdata/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
example/data/postgresqlite/pgdata/pg_stat/: db_0.stat  db_13774.stat  global.stat
example/data/postgresqlite/pgdata/pg_xact/: 0000
example/html_files/: history.html  layout.html
example/static/: styles.css
example/templates/: index.html  login.html  view_game.html
(+274 files in other folders)
