[tool.poetry]
name = "pokepaste-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
postgresqlite = "^0.4.8"
pgcli = "^4.1.0"
pandas = "^2.2.3"
flask-bcrypt = "^1.0.1"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
flask-sqlalchemy-stubs = "^0.2"
flask-migrate = "^4.0.7"
gunicorn = "^23.0.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
