[tool.poetry]
name = "03-flask-sql"
version = "0.1.0"
description = ""
authors = ["Afc_Adinho <afcadinho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
postgresqlite = "^0.4.8"
pgcli = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
